# plz

./: Cargo.toml  README.md
src/: lib.rs  main.rs  openai.rs  prompt.rs
